--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
         <script>
             function Go() {
-                let url = 'sreekar617.github.io/rice-cooker';
+                let url = 'sreekar617.github.io/minecraft/';
                 maskedWindow = window.open();
 
                 const doc = maskedWindow.document;
